[project]
name = "tibber.py"
version = "0.7.1"
description = "A python wrapper for the Tibber API."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Eric Bieszczad-Stie", email = "ericbieszczad@gmail.com" }
]
requires-python = ">=3.9.0"
dependencies = [
    "gql==3.5.3",
    "gql[aiohttp]>=3.4.0",
    "gql[websockets]>=3.4.0",
    "graphql-core>=3.2.3",
    "backoff>=2.2.1",
    "asyncio-atexit>=1.0.1",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Documentation = "https://tibberpy.readthedocs.io/en/latest/"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "tibber"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.3.1",
    "ruff>=0.15.6",
]

[tool.ruff.lint]
ignore = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# The default suite is fully offline and deterministic. Network-dependent tests are
# opt-in: run them with `pytest -m "live or realtime"` (see .github/workflows/live.yml).
addopts = "--strict-markers -m 'not live and not realtime'"
markers = [
    "live: queries the real Tibber demo API over the network (deselected by default)",
    "realtime: opens a websocket to the live measurement API (deselected by default)",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
fail_under = 75